# resti-fullstack

./: .env.dev  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: Dockerfile  alembic.ini  entrypoint.sh  manage.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: users.py
backend/app/core/: security.py  utils.py
backend/app/core/database/: __init__.py  base.py  connect.py  repository.py  transaction.py
backend/app/core/di/: __init__.py  config.py  dao.py  database.py  service.py
backend/app/core/dto/: users.py
backend/app/core/mixins/: schemas.py
backend/app/database/: connection.py
backend/app/database/dao/: base.py  users.py
backend/app/database/models/: __init__.py  base.py  users.py
backend/app/models/: __init__.py  users.py
backend/app/repository/: users.py
backend/app/schemas/: mixins.py  users.py
backend/app/services/: users.py
backend/migration/: README  env.py
backend/migration/versions/: 4bc00fc4080b_.py  e9fb9785a075_.py
nginx/: Dockerfile  default.conf  entrypoint.sh  nginx.conf
typings/app/: config.pyi
typings/app/api/: depends.pyi  v1.pyi
typings/app/api/routes/: users.pyi
typings/app/database/: __init__.pyi  dependencies.pyi  model_base.pyi  utils.pyi
typings/app/database/models/: users.pyi
typings/app/schemas/: _get_mixin.pyi  generic.pyi  users.pyi
typings/app/services/: _base.pyi  users.pyi
