[project]
name = "resti-crm"
version = "0.1.0"
description = ""
authors = [
    {name = "JohnSour",email = "mr.ukhov@list.ru"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "setuptools (>=75.8.2,<76.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
aiosqlite="^0.20.0"